--- a/main.css
+++ b/main.css
@@ -14,6 +14,7 @@
     background-image: url("cover.jpg");
     background-size: cover;
     background-position: center;
+    position: absolute;
 
 }
 .right{
@@ -69,11 +70,11 @@ li a:hover{
     padding-right: 15px; */
 } 
 .text{
-    position: absolute;
+    position: relative;
     color: white;
     text-align: center ;
     /* text-wrap: wrap; */
-    padding-top:150px; 
+    /* padding-top:150px;  */
     padding-bottom: 0%;
     height: 75px;
     width: 100%;
@@ -99,6 +100,7 @@ li a:hover{
     background-color: white;
     border: solid 1px;
     border-radius: 10px;
-    float:center;
+    float:bottom;
     margin: auto;
+
 }
