--- a/main.css
+++ b/main.css
@@ -72,7 +72,7 @@ li a:hover{
     height: 75px;
     width: 100%;
     top: 160px;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family:Georgia;
 }
 .one{
     font-size:30px;
@@ -120,11 +120,20 @@ li a:hover{
     font-size: medium;
     font-family:Georgia, Times, 'Times New Roman', serif;
 }
-.flights{
+.tablink{
+    box-shadow: 2px 0px 0px rgb(182, 179, 179, 0.2);
+}
+.tablink:hover{
+    box-shadow: 0px 2px 0px rgb(7, 7, 7);
+}
+.tablink:active{
+    box-shadow: 0px 2px 0px rgb(7, 7, 7);
+}
+.tabcontent{
     width: auto;
     display: flex;
 }
-.flights fieldset{
+.tabcontent fieldset{
     width: 250px;
     height: 30px;
     margin: 10px;
@@ -146,4 +155,258 @@ li a:hover{
     box-shadow: 4px 4px 5px 0 rgba(193, 193, 193, 0.4);
     border: none;
     font-family: Georgia, 'Times New Roman', Times, serif;
+}
+.showflight {
+    /* float: left; */
+    width:130px;
+    height:33px;
+    background-color: #8DD3BB;
+    box-shadow: 4px 4px 5px 0 rgba(193, 193, 193, 0.4);
+    border: none;
+    border-radius: 5px;
+    font-family: Georgia;
+} 
+.showflight img{
+    float: left;
+    width:fit-content;
+    height:fit-content;
+    background-color: #8DD3BB;
+    /* box-shadow: 4px 4px 5px 0 rgba(193, 193, 193, 0.4); */
+    /* border: none; */
+} 
+.Plan{
+    height: fit-content;
+    width: fit-content;
+    text-align: left;
+    position: absolute;
+    top:600px;
+    left:200px;
+    margin-bottom: 20px;
+}
+.Plan h1{
+    margin-bottom: 0%;
+}
+.Plan h5{
+    margin-top: 1%;
+    font-family:Georgia, Times, 'Times New Roman', serif;
+    font-weight: lighter;
+}
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-gap: 30px;
+    padding-right:20px;
+}
+.grid-item {
+    box-shadow: 4px 4px 5px 0 rgba(193, 193, 193, 0.4);
+    border-radius: 10px;
+    width:389px;
+    height: fit-content;
+    /* display: flex; */
+}
+.grid-item img{
+    padding: 10px;
+    margin:10px;
+}
+.gridtext1{
+    margin-left:120px;
+    margin-top:40px;
+    width: fit-content;
+    height: fit-content;
+    position: absolute;
+    font-family:Georgia;
+    color:grey;
+}
+.gridtext2{
+    margin-left:120px;
+    margin-top:65px;
+    width: fit-content;
+    height: fit-content;
+    position: absolute;
+}
+.grid-container2 {
+    display: grid;
+    grid-template-columns: auto auto ;
+    grid-gap: 20px;
+    position: absolute;
+    top:1250px;
+    left:200px;
+}
+.grid1 {
+    box-shadow: 4px 4px 5px 0 rgba(193, 193, 193, 0.4);
+    border-radius: 10px;
+    width:600px;
+    height: fit-content;
+    display: flex;
+    position: relative;
+    /* padding-bottom: 20px; */
+}
+.gridtext3{
+    position: absolute;
+    left:42%;
+    top:70%;
+    font-family:Georgia;
+    color:white;
+    font-size: 35px;
+}
+.gridtext4{
+    position: absolute;
+    left:15%;
+    top:78%;
+    font-family:Georgia;
+    color:white;
+    font-size: 16px;
+}
+.showbtn{
+    position: absolute;
+    width:130px;
+    height:33px;
+    left:42%;
+    top:85%;
+    background-color: #8DD3BB;
+    border: none;
+    box-shadow: 4px 4px 5px 0 rgba(255, 255, 255, 0.2);
+    font-family:Georgia;
+    border-radius: 5px;
+}
+.showbtn img{
+    height: fit-content;
+    width: fit-content;
+    float: left;
+}
+.Reviews{
+    height: fit-content;
+    width: fit-content;
+    text-align: left;
+    position: absolute;
+    top:1850px;
+    left:200px;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+}
+.Reviews h1{
+    margin-bottom: 0%;
+}
+.Reviews h5{
+    margin-top: 1%;
+    font-family:Georgia, Times, 'Times New Roman', serif;
+    font-weight: lighter;
+}
+.Reviewgrid{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-gap: 80px;
+    /* padding-right:20px; */
+    height: 500px;
+    
+}
+.reviewgrid1 {
+    box-shadow: 24px 24px 0px  rgba(141, 211, 187, 0.5);
+    border-radius: 10px;
+    width:389px;
+    /* height: fit-content; */
+    /* display: flex; */
+   /* box-shadow: 0px 0px 3px 3px 2px rgba(155, 155, 155, 0.1); */
+}
+.reviewgrid1 img{
+    position: absolute;
+    width: 27%;
+    height:37%;
+    top:57%;
+    /* left:10%; */
+}
+.reviewgridtext1{
+    font-size: 24px;
+    font-family: Georgia;
+    padding-bottom: 5px;
+    margin-bottom: 7px;
+}
+.reviewgridtext2{
+    font-size: 14px;
+    font-family: Verdana;
+    padding-top: 5px;
+    color: grey;
+}
+.reviewgridtext3{
+    font-size: 14px;
+    font-family: Georgia;
+    float: right;
+    padding-right: 20px;
+    padding-top: 10PX;
+    
+}
+#star{
+    position: absolute;
+    height: 60px;
+    width: 70px;
+    /* display: flex; */
+}
+.footer{
+    width: 100%; 
+    height: 350px; 
+    position: absolute;
+    background-color: #8DD3BB;
+    top:900px;
+}
+.image1 img{
+    position:relative;
+    top:220px;
+    left:50px;
+}
+.footer2{
+    background-color: aquamarine;
+    width:75%;
+    height:280px;
+    position:relative;
+    left:170px;
+    bottom: 250px;
+    border-radius: 15px;
+}
+.footer2 h2{
+    font-family: Verdana;
+    padding:15px;
+
+}
+.footer2 h6{
+    font-family: Verdana;
+    font-weight: lighter;
+    font-size: 20px;
+    margin:0%;
+    color: #112211;
+    padding-left: 15px;
+}
+.footer2 p{
+    color: #112211;
+    font-family: Verdana;
+    font-weight: lighter;
+    font-size: 13px;
+    margin-top:0%;
+    margin-bottom: 20px;
+    padding-left: 15px;
+
+}
+.footerimage{
+    position: relative;
+    float: right;
+    bottom: 155px;
+    height:100px;
+}
+.footer2 input{
+    height:38px;
+    width:240px;
+    border-radius:8px;
+    margin-left:15px;
+    border:none;
+    padding: 3px;
+}
+.footer2 button{
+    height:40px;
+    width: 80px;
+    border-radius:8px;
+    background-color: black;
+    color:white;
+    padding:5px;
+    font-family:Helvetica;
+    font-size: smaller;
+    border:none;
 }
